--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3313546992108200" crossorigin="anonymous"></script>
 
 </head>
 
