--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3313546992108200" crossorigin="anonymous"></script>
-
+<link rel="icon" type="image/x-icon" href="/static/favicon.ico">
 </head>
 
 
